...
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Looking to buy something? Explore items that other users are selling and see if they match your needs!"-->
<!--            android:textColor="#000000"/>-->

<!--        <Button-->
<!--            android:id="@+id/share"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Share" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
...
